<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.drivesafe.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.drivesafe.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_MenuFragment"
            app:destination="@+id/menuFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_ReportFragment"
            app:destination="@id/reportFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_ProfileFragment"
            app:destination="@+id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.drivesafe.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>

    <fragment
        android:id="@+id/reportFragment"
        android:name="com.example.drivesafe.ReportFragment"
        android:label="ReportFragment">

        <action
            android:id="@+id/action_ReportFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.drivesafe.ProfileFragment"
        android:label="ProfileFragment">

        <action
            android:id="@+id/action_ProfileFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.drivesafe.MenuFragment"
        android:label="MenuFragment">
        <action
            android:id="@+id/action_MenuFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>

</navigation>