<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".96" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toptoolbar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#121212"
        app:layout_constraintEnd_toEndOf="@id/rightguideline"
        app:layout_constraintStart_toStartOf="@id/leftguideline"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="410dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/menuicon"
                android:src="@drawable/menuicon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="290dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/profilepic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/welcomebox"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="@id/leftguideline"
        app:layout_constraintTop_toBottomOf="@id/toptoolbar">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dashboard"
            android:src="@drawable/blackbox" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcomemessage"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/checkperformance"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_rightarrow" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressbar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="84"
                    android:progressDrawable="@drawable/greenprogressbar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_performance_percentage"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </FrameLayout>


    <TextView
        android:id="@+id/dashboardtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/leftguideline"
        app:layout_constraintTop_toBottomOf="@id/welcomebox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboardtext"
        tools:listitem="@layout/cardview" />

    <!--    <Button-->
    <!--        android:id="@+id/button_second"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/previous"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/dashboardtext" />-->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.DriveSafe.AppBarOverlay"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bottomtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:backgroundTint="@color/white"
            app:popupTheme="@style/Theme.DriveSafe.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dashboard"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@drawable/dashboard" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/report"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@drawable/report" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    app:drawableTopCompat="@drawable/profile" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>